[feat]: module and routes created for Products

--- a/Client/src/app/modules/admin/components/categories/list-categories/list-categories.component.html
+++ b/Client/src/app/modules/admin/components/categories/list-categories/list-categories.component.html
@@ -1,1 +1,7 @@
-<h3 class="font-medium text-2xl">List category</h3>
+<div class="flex items-center justify-between">
+    <h3 class="font-medium text-2xl">List category</h3>
+    <button routerLink="/admin/category/create"
+    class="font-medium leading-6 text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 flex align-middle text-center justify-center items-center"
+    >Add new&nbsp;
+    </button>
+</div>
