[feat]: multi select functionality added

--- a/Client/src/app/modules/admin/components/categories/create-category/create-category.component.html
+++ b/Client/src/app/modules/admin/components/categories/create-category/create-category.component.html
@@ -16,9 +16,8 @@
                 <div class="mb-7 bg-white rounded-md shadow-md p-5">
                     <h4 class="font-medium tracking-wide text-[#071437] mb-2">Thumbnail</h4>
                     <app-file-upload
-                        [imageUpload]="imageUploadForm" 
-                        [altAttribute]="'Category main image'"
-                        [titleAttribute]="'Category main image'"></app-file-upload>
+                        [imageUpload]="imageUploadForm"
+                        [uploadHelpfulText]="'SVG, PNG, JPG or GIF (Ideal size 500x500px)'"></app-file-upload>
                 </div>
 
                 <!-- Parent category -->
