--- a/Client/src/app/modules/admin/components/products/list-products/list-products.component.html
+++ b/Client/src/app/modules/admin/components/products/list-products/list-products.component.html
@@ -1,11 +1,7 @@
 <div class="flex items-center justify-between">
     <h3 class="font-medium text-2xl">List products</h3>
-    <a routerLink="/admin/product/create"
+    <button routerLink="/admin/product/create"
         class="font-medium leading-6 text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 flex align-middle text-center justify-center items-center">Add
         new&nbsp;
-    </a>
+    </button>
 </div>
-
-<a routerLink="/">
-Click me
-</a>
