--- a/Client/src/app/modules/admin/components/products/create-products/create-products.component.html
+++ b/Client/src/app/modules/admin/components/products/create-products/create-products.component.html
@@ -1,10 +1,10 @@
 <form [formGroup]="createProductyForm" (submit)="createProduct()">
     <div class="sm:flex justify-between items-center mb-3">
-        <h3 class="font-medium text-2xl mb-3">Create</h3>
+        <h3 class="font-medium text-2xl ">Create product</h3>
         
         <button
             type="submit"
-            class="inline-flex items-center px-5 py-2.5 text-sm font-medium text-center text-white bg-indigo-700 rounded-lg focus:ring-4 focus:ring-indigo-200 hover:bg-indigo-800">
+            class="font-medium leading-6 text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 flex align-middle text-center justify-center items-center">
             Create product
         </button>
     </div>
