[refac]: product price saved in db

--- a/Client/src/app/modules/admin/components/products/create-products/create-products.component.html
+++ b/Client/src/app/modules/admin/components/products/create-products/create-products.component.html
@@ -247,10 +247,10 @@
                                 </div>
                                 <input
                                     type="number"
-                                    id="basePrice"
+                                    id="price"
                                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-indigo-500 focus:border-indigo-500 block w-full pl-10 p-2.5"
                                     placeholder="0"
-                                    formControlName="basePrice" />
+                                    formControlName="price" />
                                 </div>
                                 <small class="text-gray-400 text-xs">Set price for product</small>
                         </div>
